adjusted the css for home on mobile screen, fixed category page 1 rendering issue

--- a/client/src/pages/CategoryPages/categorypages.css
+++ b/client/src/pages/CategoryPages/categorypages.css
@@ -158,4 +158,8 @@
      .page2-singlePost-custom-div{
         width: 100%;
      }
+     .singlePost-div{
+        width: 100%;
+
+     }
 }
